Add broadcast permission

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -24,3 +24,6 @@ permissions:
   BasedHits.claim:
     description: Allows you to claim a bounty
     default: true
+  BasedHits.broadcast:
+    description: Allows you to see announcements of hits
+    default: true
